# developer-stress-predictor-ml-production

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  model-training.yml
infrastructure/: Dockerfile  Dockerfile.streamlit  cloudbuild.yaml  docker-compose.yml  prometheus.yml
models/: metrics.json  stress_model.joblib
notebooks/: developer_stress.ipynb
scripts/: train_model.py
src/: __init__.py  config.py
src/api/: dependencies.py  main.py  schemas.py
src/data/: __init__.py  loader.py  preprocessor.py
src/features/: __init__.py  engineering.py
src/models/: __init__.py  predictor.py  trainer.py
src/monitoring/: __init__.py  logging_config.py  metrics.py
streamlit_app/: app.py  utils.py
streamlit_app/components/: __init__.py  monitoring_dashboard.py  prediction_form.py  results_display.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_predictor.py  test_preprocessor.py
training/: __init__.py  train_pipeline.py  vertex_config.yaml
